--- a/src/views/projectFunding.html
+++ b/src/views/projectFunding.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    {{template "./projectTopNav.html" .}}
+    {{template "./platformAdminTopNav.html" .}}
 
     <script type="text/javascript">
         document.getElementById("proj-notice").style.backgroundColor = 'white';
