--- a/src/views/platformAdminTopNav.html
+++ b/src/views/platformAdminTopNav.html
@@ -12,8 +12,10 @@
         <img src="{{.user.Data.HeadShotUrl}}">
         <div class="platform-admin">KCoin-平台管理</div>
         <a class="first" id="platform-info" href="./projectfunding">平台信息</a>
-        <a id="capital-injection-management" href="./capitalInjection">注资管理</a>
-        <a id="prject-capital-injection" href="./projectMemberList/?:id">项目注资</a>
+        <a id="capital-injection-management" href="./projectfunding">注资历史</a>
+        <a id="prject-capital-injection" href="./capitalInjection">项目注资</a>
     </div>
-</body>
-</html>
+    <div style="clear:both"></div>
+    <!--清除浮动-->
+   </body>
+   </html>
