--- a/src/views/platformAdminTopNav.html
+++ b/src/views/platformAdminTopNav.html
@@ -11,7 +11,7 @@
     <div class="navigation">
         <img src="{{.user.Data.HeadShotUrl}}">
         <div class="platform-admin">KCoin-平台管理</div>
-        <a class="first" id="platform-info" href="./projectfunding">平台信息</a>
+        <a class="first" id="platform-information" href="./platformInformation">平台信息</a>
         <a id="capital-injection-management" href="./projectfunding">注资历史</a>
         <a id="prject-capital-injection" href="./capitalInjection">项目注资</a>
     </div>
