change url structure and add footer to projectInfo

--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -81,5 +81,7 @@
             <div class="record-label">发放记录</div>
         </div>
     </div>
+
+    {{template "./footer.html" .}}
 </body>
 </html>
