--- a/src/views/projectNotice.html
+++ b/src/views/projectNotice.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>项目信息</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/projectNotice.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/projectNotice.css"/>
 </head>
 
 <body>
