添加项目前后端对接

--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -78,11 +78,10 @@
                             </p>
                             
                             <ul class="projects">
-                                {{with .user.Data}}
-                                {{range .ProjectList}}
+                                {{range .repos.Data}}
                                     <li>{{.ProjectName}}</li>
                                 {{end}}
-                                {{end}}
+
                             </ul>
                         </div>
                     </div>
