--- a/src/static/css/personalProjects.css
+++ b/src/static/css/personalProjects.css
@@ -69,93 +69,6 @@
     filter: alpha(opacity=88); 
 }
 
-/*以下为点击按钮后高亮的图层*/
-
-.main{
-    width:800px;
-    margin: auto;
-    position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-}
-.content{
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.steps {    
-    position: relative;
-    counter-reset: step;  /*创建步骤数字计数器*/
-    margin:0;
-    padding:0;
-}
-
-/*步骤描述*/
-.steps li {
-    list-style-type: none;
-    font-size: 12px;
-    color:black;
-    text-align: center;
-    width: 33.3%;
-    position: relative;
-    float: left;
-    padding-bottom: 5px;
-}   
-/*步骤数字*/
-.steps li:before {
-  display: block;
-  content: counter(step); /*设定计数器内容*/
-  counter-increment: step;  /*计数器值递增*/
-  width: 32px;
-  height: 32px;
-  background-color: #ffd7d8;
-  line-height: 32px;
-  border-radius: 32px;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  font-weight: 700;
-  margin: 0 auto 8px auto;
-}
- 
-/*连接线*/
-.steps li ~ li:after {
-  content: '';
-  width: 100%;
-  height: 2px;
-  background-color: #ffd7d8;
-  position: absolute;
-  left: -50%;
-  top: 15px;
-  z-index: -1; /*放置在数字后面*/
-}
- 
-.steps li.active:before,
-.steps li.active:after {
-  background-color: #ff5b5d;
-}
-
-img.profile{
-    height: 25px;
-}
-#username{
-    font-weight:bold;
-}
-#userprojects{
-    color:gray;
-}
-ul.projects{        
-        list-style-position: outside;
-    font-size:130%;
-    padding: 0px;
-}
-.projects li{
-    margin-top:5px;
-    list-style-type: none;
-    border-radius: 5px;
-    background-color:#edf0f5;
-    padding: 5px;
-}
 
 #managed_projects{
     display: none;
@@ -184,3 +97,239 @@ a:link,a:visited,a:hover,a:active
     height: 60px;
 }
 
+
+/*
+导入项目页面
+*
+*
+*
+*
+*
+*/
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.main{
+	width:800px;
+	margin: auto;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.content{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.steps {	
+	position: relative;
+  	counter-reset: step;  /*创建步骤数字计数器*/
+  	margin:0;
+  	padding:0;
+}
+
+/*步骤描述*/
+.steps li {
+	list-style-type: none;
+  	font-size: 12px;
+  	color:black;
+  	text-align: center;
+	width: 33.3%;
+	position: relative;
+	float: left;
+	padding-bottom: 5px;
+}	
+/*步骤数字*/
+.steps li:before {
+  display: block;
+  content: counter(step); /*设定计数器内容*/
+  counter-increment: step;  /*计数器值递增*/
+  width: 32px;
+  height: 32px;
+  background-color: #ffd7d8;
+  line-height: 32px;
+  border-radius: 32px;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  font-weight: 700;
+  margin: 0 auto 8px auto;
+}
+ 
+/*连接线*/
+.steps li ~ li:after {
+  content: '';
+  width: 100%;
+  height: 2px;
+  background-color: #ffd7d8;
+  position: absolute;
+  left: -50%;
+  top: 15px;
+  z-index: -1; /*放置在数字后面*/
+}
+  
+.steps li.active:before,
+.steps li.active:after {
+  background-color: #ff5b5d;
+}
+
+/*主体*/
+input.url_input{
+	border-style: ridge;
+	border-radius: 5px;
+	margin-top: 5px;
+	padding-left: 5px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	color:gray;
+	font-size: 110%;
+	width:90%;
+}
+
+input.submit{
+	border-style: ridge;
+	border-radius: 5px;
+	background-color:white;
+	color:#ff5b5d;
+	font-size: 110%;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-left: 5px;
+}
+
+h1 {
+	background-color: #434343;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 20px;
+	color:white;
+	font-weight:normal;
+	font-size: 160%;
+}
+
+img.profile{
+	height: 25px;
+}
+
+#username{
+	font-weight:bold;
+}
+
+#userprojects{
+	color:gray;
+}
+
+ul.projects{   		
+	list-style-position: outside;
+	font-size:130%;
+	padding: 0px;
+}
+
+.projects li{
+	margin-top:5px;
+	list-style-type: none;
+	border-radius: 5px;
+	background-color:#edf0f5;
+	padding: 5px;
+}
+
+#next_back{
+	margin-top: 20px;
+}
+
+button.back{
+	border-style: ridge;
+	border-radius: 5px;
+	color:#ff5b5d;
+	background-color: white;
+	font-size: 110%;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	/* float:right; */
+	margin-left: 590px;
+	margin-bottom: 20px;
+}
+
+button.next{
+	border-style: ridge;
+	border-radius: 5px;
+	font-size: 110%;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-left: 15px;
+	background-color: #ff5b5d;
+	color:white;
+	float:right;
+}
+button.confirm{
+	border-style: ridge;
+	border-radius: 5px;
+	font-size: 110%;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-left: 15px;
+	background-color: #ff5b5d;
+	color:white;
+	float:right;
+	display: none;
+}
+
+#myprojects{
+	display: block;
+}
+
+#init_message{
+	display: none;
+}
+#config_project{
+	display: none;
+}
+
+#config_project p{
+	color:gray;
+}
+
+input.projectname{
+	border-style: ridge;
+	border-radius: 5px;
+	padding: 5px;
+	color:gray;
+	font-size: 110%;
+	width:98%;
+}
+
+textarea.projectintro{
+	border-style: ridge;
+	border-radius: 5px;
+	padding: 5px;
+	color:gray;
+	font-size: 110%;
+    width:98%;
+    height:100px;  
+}
+
+.upload{
+	padding: 4px 10px;
+	border-style: ridge;
+	border-radius: 5px;
+    border: 1px solid #999;
+    text-decoration: none;
+    color: #ff5b5d;
+}
+
+.change{
+	border-style: ridge;
+	border-radius: 5px;
+	color:#ff5b5d;
+	font-size: 25px;
+	overflow: hidden;
+	position: absolute;
+	left:20px;
+	bottom: 65px;
+	opacity:0;
+	width:90px;
+}
