--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -17,6 +17,11 @@
             document.getElementById("personalProjectsLink").style.backgroundColor = 'white';
         </script>
 
+        <!--自定义cookie，获取用户名-->
+        <script type="text/javascript">
+            document.cookie = "userID=" + {{.user.Data.UserName}}
+        </script>
+
         <div class="mainInterface">
             <div class="navigation">
                 <a  class="first" id="manage" onclick="show_joined()">我参加的项目({{.memberList_len}})</a>
@@ -30,17 +35,18 @@
                 <div class="container-child">
                     {{with .user}}
                     {{range .Data.ProjectList}}
+                    <a href="/project/{{.ProjectName}}/info">    <!--点击项目时，跳转到项目详情页面-->
                     <div class="project">
                         <img class="project-cover" alt="project" src="{{.ProjectCoverUrl}}"/>
                         <div class="project-name">{{.ProjectName}} </div>
                         <div class="introduction">introduction</div>
                         <div class="CC">CC:12138</div>
-                        <hr/>
+                        <hr/>    <!--hr表示水平分割线-->
                         {{range .MemberList}}
                         <img class="head_shot" alt="" src="{{.HeadShotUrl}}"/>
-                        <!--后续或许可以设置成，如果成员过多，只显示前几名成员，后面加上点点点。-->
                         {{end}}
                     </div>
+                    </a>
                     {{end}}
                     {{end}}
                 </div>
