--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -2,9 +2,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>我的项目</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/personalProjects.css"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/personalPage.css"/>
-    <link rel="stylesheet" type="text/css" href="../static/css/import.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/personal.css"/>
     <script type="text/javascript" src="../static/js/import.js"></script>
 </head>
 
