--- a/src/views/platformAdminTopNav.html
+++ b/src/views/platformAdminTopNav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kcoin</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/platformAdminTopNav.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/platformAdmin.css"/>
 </head>
 <body>
     <div class="head">
@@ -12,7 +12,7 @@
         <img src="{{.user.Data.HeadShotUrl}}">
         <div class="platform-admin">KCoin-平台管理</div>
         <a class="first" id="platform-information" href="./platformInformation">平台信息</a>
-        <a id="capital-injection-management" href="./projectfunding">注资历史</a>
+        <a id="proj-notice" href="./projectfunding">注资历史</a>
         <a id="prject-capital-injection" href="./capitalInjection">项目注资</a>
     </div>
     <div style="clear:both"></div>
