--- a/src/views/platformInformation.html
+++ b/src/views/platformInformation.html
@@ -2,74 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>平台信息</title>
-    <style>
-        .pltinfo-container {
-            margin: auto;
-            width: 1200px;
-            font-size: 0;
-        }
-        .pltinfo-card {
-			display: inline-block;
-			vertical-align: top;
-			border: 2px solid #52B1EC;
-			border-radius: 10px;
-			width: 500px;
-			height: 500px;
-			margin-top: 70px;
-			margin-left: 46px;
-			margin-right: 46px;
-        }
-        .card-head {
-			height: 70px;
-			background-color: #ACDCFA;
-        }
-        .card-title {
-			display: inline-block;
-			vertical-align: bottom;
-			font-size: 25px;
-			color: #3B43F4;
-			height: 70px;
-			line-height: 70px;
-			text-align: center;
-			margin-left: 20px;
-        }
-        .card-value {
-			display: inline-block;
-			vertical-align: bottom;
-			font-size: 25px;
-			font-weight: bold;
-			color: #5DCBED;
-			height: 370px;
-			width: 500px;
-			line-height: 70px;
-			text-align: center;
-			
-        }
-	.card-value p{
-			display: inline-block;
-			vertical-align: bottom;
-			font-size: 25px;
-			font-weight: bold;
-			color: #5DCBED;
-			height: 70px;
-			width: 100px;
-			line-height: 70px;
-			text-align: center;
-			margin-left: 30px;
-        }
-        .record-label {
-			font-size: 15px;
-			text-align: center;
-			color: #1B82EB;
-			width: 100px;
-			height: 30px;
-			line-height: 30px;
-			margin: -15px auto;
-			background-color: #41F2FD;
-			border-radius: 15px;
-        }
-    </style>
+	<title>平台信息</title>
+	<link rel="stylesheet" type="text/css" href="/static/css/platformAdmin.css"/>
 </head>
 
 <body>
@@ -83,7 +17,7 @@
             <div class="card-head">
 				<div class="card-title">平台拥有的CC数</div>   
             <div class="record-label">CC记录</div>
-			<div class="card-value">
+			<div class="pltinfo-card-value">
 				<p>日期</p><p>变化</p><p>总数</p>
 				<p>11.23</p><p>+1000</p><p>1000</p>
 				<p>11.25</p><p>+2000</p><p>3000</p></div>
@@ -94,7 +28,7 @@
                 <div class="card-title">托管在平台的项目总数</div>
             </div>
             <div class="record-label">项目记录</div>
-			<div class="card-value">
+			<div class="pltinfo-card-value">
 			    <p>日期</p><p>变化</p><p>总数</p>
 			    <p>11.23</p><p>+2</p><p>2</p>
 			    <p>11.25</p><p>+1</p><p>3</p></div>
