--- a/src/views/projectSetting.html
+++ b/src/views/projectSetting.html
@@ -3,53 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>projectsetting</title>
-<style>
-	body{
-		margin: 0;
-		
-	}
-.projectsetting{
-	margin-top: 60px;
-	height: 282px;
-    }
-.projectsetting p1{
-	display:block;
-	color: #A9AFB5;
-	margin-top: 110px;
-	margin-left: 20px;
-	font-size: 16px;
-	}
-.projectsetting p2{
-	display:block;
-	margin-top: 50px;
-	margin-left: 20px;
-	color: #A9AFB5;
-	font-size: 16px;
-	}
-.upload-pjname {
-	display:block;
-	font-size: 16px;
-	width: 1150px;
-	height: 35px;
-	border-radius: 5px;
-	outline: none;
-	border: 1px solid #B5B3B3;
-	margin-top: 10px;
-	margin-left: 20px;
-    }
- .upload-button {
-	display:block;
-	width: 70px;
-	margin-top: 10px;
-	margin-left:20px;
-	border:2px solid #27D5F5;
-    padding:10px;
-    border-radius: 10px;
-    color: #27D5F5;
-    }
-	
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="/static/css/project.css"/>
 </head>
 
 <body>
