--- a/src/views/ccSearchPage.html
+++ b/src/views/ccSearchPage.html
@@ -7,7 +7,7 @@
 			document.getElementById("personalPageLink").style.backgroundColor = 'white';
 		}
 	</script>
-    <link rel="stylesheet" type="text/css" href="../static/css/personalPage.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/personal.css"/>
 </head>
 
 <body>
