--- a/src/views/leftNav.html
+++ b/src/views/leftNav.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>个人中心</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/personalPage.css"/>
+    <link rel="stylesheet" type="text/css" href="../static/css/personal.css"/>
 </head>
 <body>
     <div class="banner">
