--- a/src/views/projectMemberList.html
+++ b/src/views/projectMemberList.html
@@ -2,45 +2,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>项目信息</title>
-    <style>
-        .memberListContainer{
-            background-color: white;
-            margin: auto;
-            margin-top: 80px;
-            width: 1200px;
-            height: 300px;
-        }
-        .memberItem{
-            float:left;
-            width: 300px;
-            height: 125px;
-            background-color: white;
-        }
-        .pageList{
-            position: relative;
-            width: 100%;
-            height: 50px;
-            background-color: white;
-        }
-        .lookMore{
-            line-height: 50px;
-        }
-        .lookMore > a{
-            position: relative;
-            left: 92%;
-            color:cadetblue;
-        }
-        .memberItem > .headShot{
-            float:left;
-            width: 125px;
-            height: 125px;
-        }
-        .memberItem > .memberInfo{
-            float: left;
-            width: 175px;
-            height: 125px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/static/css/project.css"/>
 </head>
 
 <body>
