fix #183 & 188 增加工作列表页面和项目贡献度评定规则

--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -22,6 +22,19 @@
             margin-left: 46px;
             margin-right: 46px;
         }
+        .info-card-rule {
+            display: inline-block;
+            vertical-align: top;
+            border-style: solid;
+            border-width: 4px;
+            border-radius: 10px;
+            border-color: #bfbfbf;
+            width: 1100px;
+            height: 350px;
+            margin-top: 70px;
+            margin-left: 46px;
+            margin-right: 46px;
+        }
         .card-head {
             height: 70px;
             background-color: #bfbfbf;
@@ -79,6 +92,11 @@
                 <div class="card-value">0</div>
             </div>
             <div class="record-label">发放记录</div>
+        </div>
+        <div class="info-card-rule">
+            <div class="card-head">
+                <div class="card-title">项目贡献度评定规则</div>
+            </div>
         </div>
     </div>
 
