--- a/src/views/projectMemberList.html
+++ b/src/views/projectMemberList.html
@@ -58,7 +58,7 @@
         </div>
         <div class="memberItem">
             <div class="headShot">
-                <img src="/static/img/tx1.png" style="width: 100px;height: 100px;border-radius:50%;overflow:hidden" />
+                <a href="./memberWork"><img src="/static/img/tx1.png" style="width: 100px;height: 100px;border-radius:50%;overflow:hidden" /></a>
             </div>
             <div class="memberInfo">
                 <p>用户名：DoubleJ</p>
