--- a/src/static/css/personalPage.css
+++ b/src/static/css/personalPage.css
@@ -25,7 +25,7 @@ ul {
 #container{
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 1200px;
 }
 
 .left-nav{
@@ -120,20 +120,25 @@ ul {
     border-collapse:collapse;
     margin-top: 20px;
 }
-.customers td, .customers th 
-{
-	font-size:1em;
-	border:0px solid #ffffff;
-	padding:3px 7px 2px 7px;
-}
 .customers th 
-{
+{	display: inline-block;
+	border:0px solid #ffffff;
 	font-size:1em;
 	text-align:left;
-	padding-top:5px;
-	padding-bottom:4px;
+	margin-top:30px;
+	margin-right:80px;
 	background-color:#FFFFFF;
-	
+	width: 200px;	
+}
+.customers td
+{	display: inline-block;
+	border:0px solid #ffffff;
+	font-size:1em;
+	text-align:left;
+	margin-top:30px;
+	margin-right:80px;
+	background-color:#FFFFFF;
+	width: 200px;
 }
 .customers tr.alt td 
 {
