--- a/src/static/css/projectFunding.css
+++ b/src/static/css/projectFunding.css
@@ -9,6 +9,7 @@
     height: 350px;
     padding-left: 50px;
     padding-bottom: 30px;
+    margin-bottom: 150px;
 }
 
 .customers{
@@ -21,16 +22,25 @@
 }
 
 .customers th
-{
+{	display: inline-block;
 	font-size:1em;
-	border:0px solid #ffffff;
-    padding:10px 7px 20px 7px;
+	border:1px solid #ffffff;
+    margin:5px 10px 15px 10px;
     text-align: left;
+	width: 270px;
+}
+.customers tr
+{
+	width: 1200px;
 }
 
 .customers td
-{
+{	display: inline-block;
+	width: 270px; 
+	white-space: nowrap;  
+	text-overflow: ellipsis;   
+	overflow: hidden; 
 	font-size:1em;
-	border:0px solid #ffffff;
-	padding:5px 150px 15px 10px;
+	border:1px solid #ffffff;
+	margin:5px 10px 15px 10px;
 }
