--- a/src/views/platformInformation.html
+++ b/src/views/platformInformation.html
@@ -53,7 +53,7 @@
 			font-weight: bold;
 			color: #5DCBED;
 			height: 70px;
-			width: 150px;
+			width: 100px;
 			line-height: 70px;
 			text-align: center;
 			margin-left: 30px;
@@ -84,9 +84,9 @@
 				<div class="card-title">平台拥有的CC数</div>   
             <div class="record-label">CC记录</div>
 			<div class="card-value">
-				<p>日期</p>  <p> 数量</p>
-				<p>11.23</p>  <p> +1000</p>
-				<p>11.25</p>  <p> +2000</p></div>
+				<p>日期</p><p>变化</p> <p>总数</p>
+				<p>11.23</p><p>+1000</p><p>1000</p>
+				<p>11.25</p><p>+2000</p><p>3000</p></div>
             </div>
         </div>
         <div class="pltinfo-card">
@@ -95,9 +95,9 @@
             </div>
             <div class="record-label">项目记录</div>
 			<div class="card-value">
-				<p>日期</p>  <p> 数量</p>
-			    <p>11.23</p>  <p> +2</p>
-			    <p>11.25</p>  <p> +1</p></div>
+				<p>日期</p><p>变化</p><p>总数</p>
+			    <p>11.23</p><p>+2</p><p>2</p>
+			    <p>11.25</p><p>+1</p><p>3</p></div>
         </div>
     </div>
     {{template "./footer.html" .}}
