--- a/src/static/css/project.css
+++ b/src/static/css/project.css
@@ -153,6 +153,20 @@ a:link,a:visited,a:hover,a:active
     border-radius: 15px;
 }
 
+.projectInfo-card-rule {
+    display: inline-block;
+    vertical-align: top;
+    border-style: solid;
+    border-width: 4px;
+    border-radius: 10px;
+    border-color: #bfbfbf;
+    width: 1100px;
+    height: 350px;
+    margin-top: 70px;
+    margin-left: 46px;
+    margin-right: 46px;
+}
+
 /*以下是projectNotice页面的css*/
 .container {
     width: 1200px;
@@ -293,4 +307,42 @@ a:link,a:visited,a:hover,a:active
     padding:10px;
     border-radius: 10px;
     color: #27D5F5;
+}
+
+
+/*以下是projectMemberWork.html页面的css*/
+.work-mainInterface{
+    background-color: #FFFFFF;
+    position: relative;
+    min-height: 70vh;
+    width: 100%;
+    font-size: 20px;
+}
+
+.work-record{
+    position: relative;
+    margin: 50px;
+    width: 900px;
+    height: 150px;
+}
+
+.work-customers{
+    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+    width:100%;
+    border-collapse:collapse;
+    margin-top: 20px;
+}
+
+.work-customers th {
+    font-size:1em;
+    border:0px solid #ffffff;
+    padding:3px 7px 15px 7px;
+    
+}
+
+.work-customers td{
+    font-size:1em;
+    border:0px solid #ffffff;
+    padding:3px 7px 2px 7px;
+    text-align: center;
 }
