--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -28,9 +28,9 @@
             </div>
             <div class="projectInfo-record-label">发放记录</div>
         </div>
-        <div class="info-card-rule">
-            <div class="card-head">
-                <div class="card-title">项目贡献度评定规则</div>
+        <div class="projectInfo-card-rule">
+            <div class="projectInfo-card-head">
+                <div class="projectInfo-card-title">项目贡献度评定规则</div>
             </div>
         </div>
     </div>
