--- a/src/views/platformAdminTopNav.html
+++ b/src/views/platformAdminTopNav.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <div class="head">
+        <a href="/homepage">
+            <img class="topNavLogo" src="/static/img/kcoin-logo-blue.png"/>
+            <div class="topNavName">KCOIN</div>
+        </a>
     </div>
     <div class="navigation">
         <img src="{{.user.Data.HeadShotUrl}}">
