--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -59,9 +59,9 @@
         </div>
     </div>
 
-    <div id="import" style="background:rgba(0,0,0,0.9);" onclick="hidePopup();" >
+    <div id="import" style="background:rgba(0,0,0,0.9);" onMouseDown="hidePopup();" >
         <!-- onClick="event.cancelBubble = true"   div嵌套div时，点击子级div不触发父级div点击事件。-->
-        <div class="main" style="background:rgba(255, 255, 255, 0.9)" onClick="event.cancelBubble = true">
+        <div class="main" style="background:rgba(255, 255, 255, 0.9)" onMouseDown="event.cancelBubble = true">
             <h1>导入项目
                 <img class="close-button" style="width:50px; height: 100%;position: relative;float:right;top:-5px" 
                 onclick="hidePopup();" src="../static/img/close2.png"/>
