--- a/src/views/projectMemberWork.html
+++ b/src/views/projectMemberWork.html
@@ -55,6 +55,11 @@
                     </tr>
                 </table>         
             </div>
+            <div>
+                <a href="./memberList">
+                    <div class="work-back"> &lt 返回 </div>
+                </a>
+            </div>
     </div>
     {{template "./footer.html" .}}
 </body>
