--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -22,17 +22,17 @@
 
         <div class="mainInterface">
             <div class="navigation">
-                <a  class="first" id="manage" onclick="show_joined()">我参加的项目({{.memberList_len}})</a>
+                <a  class="first" id="manage" onclick="show_joined()">我参加的项目({{.joinedprojects_len}})</a>
                 <a  id="join" onclick="show_managed()">我管理的项目({{.memberList_len}})</a>
                 <div style="padding-right: 30px; padding-top: 25px; float: right; font-size: 25px;">
                     <input type="button" style="width:125px; height:40px;" onclick="showPopup();" value="添加项目">
                 </div>
             </div>
 
+            <!-- 参加的项目 -->
             <div class="container" id="joined_projects">
                 <div class="container-child">
-                    {{with .user}}
-                    {{range .Data.ProjectList}}
+                    {{range .joinedProjects}}
                     <a href="/project/{{.ProjectName}}/info">    <!--点击项目时，跳转到项目详情页面-->
                     <div class="project">
                         <img class="project-cover" alt="project" src="{{.ProjectCoverUrl}}"/>
@@ -46,9 +46,9 @@
                     </div>
                     </a>
                     {{end}}
-                    {{end}}
                 </div>
             </div> 
+            <!-- 管理的项目，目前是测试用 -->
             <div class="container" id="managed_projects">
                 <p>test</p>
                 <p>{{.test_projectUrl}}</p>
