--- a/src/views/projectSetting.html
+++ b/src/views/projectSetting.html
@@ -12,7 +12,7 @@
 		document.getElementById("prj-set").style.backgroundColor = 'white';
 	</script>
 <div class="projectsetting">
-		<form id="models.Project"  enctype="multipart/form-data" action="/personalprojects" method="post">
+		<form action="">
 			<p1>1.填写项目名称</p1>
 			<input type="text" class="upload-pjname" placeholder="项目名称">
 			<p2>2. 填写项目描述</p2>
