fixes #219 retrieve CC from database

--- a/src/views/projectInfo.html
+++ b/src/views/projectInfo.html
@@ -17,7 +17,7 @@
         <div class="projectInfo-card">
             <div class="projectInfo-card-head">
                 <div class="projectInfo-card-title">KCoin 总值</div>
-                <div class="projectInfo-card-value">0</div>
+                <div class="projectInfo-card-value">{{.projectCC}}</div>
             </div>
             <div class="projectInfo-record-label">发放记录</div>
         </div>
