--- a/src/views/projectSetting.html
+++ b/src/views/projectSetting.html
@@ -12,14 +12,15 @@
 		document.getElementById("prj-set").style.backgroundColor = 'white';
 	</script>
 <div class="projectsetting">
-		<form action="">
+		<form action="" enctype="multipart/form-data"  method="post">
 			<p1>1.填写项目名称</p1>
-			<input type="text" class="upload-pjname" placeholder="项目名称">
+			<input type="text" class="projectsetting-pjname" name = "Projectname" placeholder="项目名称">
 			<p2>2. 填写项目描述</p2>
 			<textarea class = "projectintro" name = "ProjectIntro" maxlength="200" type="text">{{.TextField}}</textarea>
 			<p3>3.上传项目封面（选填，但只能添加不大于2M的图片）</p3>
-			<label class="upload-button" for="xFile">选择文件</label>
-			<input type="file" id="xFile" style="position:absolute;clip:rect(0 0 0 0);">	
+			<label class="projectsetting-pjcover" for="xFile">选择文件</label>
+			<input type="file" id="xFile" style="position:absolute;clip:rect(0 0 0 0);" name = "Projectcover">
+			<div><button class="projectsetting-submit" type="submit">提交</button></div>
 		</form>
 </div>
 	
