填坑：personalProjects页面，导入项目时的权限验证，改为动态获取用户名

--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -16,9 +16,9 @@
         </script>
 
         <!--自定义cookie，获取用户名-->
-        <script type="text/javascript">
+        <!-- <script type="text/javascript">
             document.cookie = "userID=" + {{.user.Data.UserName}}
-        </script>
+        </script> -->
 
         <div class="mainInterface">
             <div class="navigation">
