--- a/src/views/login.html
+++ b/src/views/login.html
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="block-dark" style="width:100%"  onclick="window.open('https://github.com/login/oauth/authorize?client_id=c698bd09d35414343da4')">
+                                <div class="block-dark" style="width:100%"  onclick="window.open('https://github.com/login/oauth/authorize?client_id=c698bd09d35414343da4&scope=user,public_repo,admin:repo_hook')">
                                     <img class="github-icon" style="top:7px;left:10px;" src="../static/img/github-icon.png">
                                     <a  class="bottom-dark" style="position: relative;top:1px;left:10px;
                                     text-decoration: none;color: aliceblue;" >使用 GitHub 账号登录</a>
