--- a/src/views/platformInformation.html
+++ b/src/views/platformInformation.html
@@ -25,7 +25,7 @@
         </div>
         <div class="pltinfo-card">
             <div class="card-head">
-                <div class="card-title">托管在平台的项目总数</div>
+                <div class="card-title">托管在平台的项目总数:&nbsp;&nbsp;&nbsp;&nbsp;{{.projNum}}</div>
             </div>
             <div class="record-label">项目记录</div>
 			<div class="pltinfo-card-value">
