--- a/src/static/css/personal.css
+++ b/src/static/css/personal.css
@@ -114,7 +114,17 @@ ul {
     font-size: 18px;
     color: #c00;    
 }
-
+.paging-btn{
+	color: black;
+	float: left;
+	padding: 6px 12px;
+	margin-right: 10px;
+	font-size: 15px;
+	border-radius: 5px;
+	transition: background-color .3s;
+    border: 1px solid #CECCCC;
+    cursor: pointer；
+}
 .customers
 {
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -503,7 +513,7 @@ ul.projects{
 }
 
 #next_back{
-	margin-top: 20px;
+	margin-top: 57px;
 }
 
 button.back{
@@ -530,6 +540,7 @@ button.next{
 	color:white;
 	float:right;
 }
+
 button.confirm{
 	border-style: ridge;
 	border-radius: 5px;
