--- a/src/static/css/platformAdmin.css
+++ b/src/static/css/platformAdmin.css
@@ -185,7 +185,17 @@ a:link,a:visited,a:hover,a:active
 	border:1px solid #ffffff;
 	margin:5px 10px 15px 10px;
 }
-
+.paging-btn{
+	color: black;
+	float: left;
+	padding: 6px 12px;
+	margin-right: 10px;
+	font-size: 15px;
+	border-radius: 5px;
+	transition: background-color .3s;
+    border: 1px solid #CECCCC;
+    cursor: pointer；
+}
 /*以下是capitalInjection页面的css*/
 .topNavLogo{
     float: left;
