--- a/src/static/css/personal.css
+++ b/src/static/css/personal.css
@@ -330,17 +330,18 @@ img.profile{
 #userprojects{
     color:gray;
 }
-ul.projects{        
+table.projects{        
         list-style-position: outside;
     font-size:130%;
     padding: 0px;
 }
-.projects li{
+.projects td{
     margin-top:5px;
     list-style-type: none;
     border-radius: 5px;
     background-color:#edf0f5;
     padding: 5px;
+    width:900px;
 }
 
 #managed_projects{
