--- a/src/static/css/platformAdmin.css
+++ b/src/static/css/platformAdmin.css
@@ -166,33 +166,33 @@ a:link,a:visited,a:hover,a:active
     font-size: 19px;
 }
 
-.customers th
-{	display: inline-block;
-	font-size:1em;
-	border:1px solid #ffffff;
+.customers th{	
+    display: inline-block;
+    font-size:1em;
+    border:1px solid #ffffff;
     margin:5px 10px 15px 10px;
     text-align: left;
-	width: 270px;
+    width: 270px;
 }
 
-.customers td
-{	display: inline-block;
-	width: 270px; 
-	white-space: nowrap;  
-	text-overflow: ellipsis;   
-	overflow: hidden; 
-	font-size:1em;
-	border:1px solid #ffffff;
-	margin:5px 10px 15px 10px;
+.customers td{
+    display: inline-block;
+    width: 270px; 
+    white-space: nowrap;  
+    text-overflow: ellipsis;   
+    overflow: hidden; 
+    font-size:1em;
+    border:1px solid #ffffff;
+    margin:5px 10px 15px 10px;
 }
 .paging-btn{
-	color: black;
-	float: left;
-	padding: 6px 12px;
-	margin-right: 10px;
-	font-size: 15px;
-	border-radius: 5px;
-	transition: background-color .3s;
+    color: black;
+    float: left;
+    padding: 6px 12px;
+    margin-right: 10px;
+    font-size: 15px;
+    border-radius: 5px;
+    transition: background-color .3s;
     border: 1px solid #CECCCC;
     cursor: pointer；
 }
