fix 267 增加js自动解析项目url中的项目名称，预填到项目名称栏

--- a/src/views/personalProjects.html
+++ b/src/views/personalProjects.html
@@ -96,7 +96,7 @@
                     <div id="config_project">
                         <p>&nbsp</p>
                         <p>1. 填写项目名称</p>
-                        <input class = "projectname" name = "ProjectName" type="text">
+                        <input class = "projectname" id = "projUrl" type="text"  placeholder="请填入项目名称" onclick="getProjectNameByUrl()"/>
                         <p>2. 填写项目描述</p>
                         <textarea class = "projectintro" name = "ProjectIntro" maxlength="200" placeholder="不超过200字符" type="text"></textarea>
                         <p>3. 上传项目封面（选填，但只能添加不大于2M的图片）</p>
